# zeton

./: Cargo.toml  README.md  build.rs  build.zig  sync
src/: atom.rs  c.zig  configuration.rs  display.rs  drw.rs  error.rs  main.rs  main.zig  util.rs  window_manager.rs  xerror.rs  xerror.zig
src/x11/: display.rs  mod.rs  xerror.rs
x11-sys/: Cargo.toml  build.rs
x11-sys/src/: wrapper.h
x11/src/: wrapper.h
