[package]
name = "zeton"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true
strip = true
opt-level = 'z'
codegen-units = 1

[dependencies]
ron = "0.8.0"
serde = { version = "1.0.159", features = ["derive"] }
x11rb = { version = "0.11.1", features = ["libc", "xinerama", "xkb", "xinput"] }
